# claude-plugin

./: .gitignore  CLAUDE.md  README.md  plugin.json
.claude-plugin/: plugin.json
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
docs/development/: README.md
skills/ghost-blog/: SKILL.md
skills/ghost-blog/scripts/: .env.example  ghost_core.py  newsletters_manage.py  posts_browse.py  posts_bulk.py  posts_crud.py  requirements.txt  tags_manage.py  test_ghost_core.py  test_posts_browse.py
skills/openproject/: .env.example  .openproject-config.yml  README.md  SKILL.md  conftest.py  pyproject.toml  spec.yml
skills/openproject/openproject-admin/: SKILL.md  pyproject.toml
skills/openproject/openproject-admin/openproject_admin/: __init__.py  config.py  priorities.py  roles.py  statuses.py  wp_types.py
skills/openproject/openproject-admin/references/: admin-api.md
skills/openproject/openproject-admin/scripts/: __init__.py  config.py  priorities.py  roles.py  statuses.py  wp_types.py
skills/openproject/openproject-admin/tests/: __init__.py  test_admin.py
skills/openproject/openproject-core/: SKILL.md  pyproject.toml  requirements.txt
skills/openproject/openproject-core/openproject_core/: __init__.py  client.py  exceptions.py  helpers.py  project_config.py
skills/openproject/openproject-core/references/: api-basics.md
skills/openproject/openproject-core/scripts/: __init__.py  client.py  types.py
skills/openproject/openproject-core/tests/: __init__.py  test_client.py  test_helpers.py
skills/openproject/openproject-documents/: SKILL.md  pyproject.toml
skills/openproject/openproject-documents/openproject_documents/: __init__.py  attachments.py  documents.py  wiki.py
skills/openproject/openproject-documents/references/: documents-api.md
skills/openproject/openproject-documents/scripts/: __init__.py  attachments.py  documents.py  wiki.py
skills/openproject/openproject-documents/tests/: __init__.py  test_documents.py
skills/openproject/openproject-notifications/: SKILL.md  pyproject.toml
skills/openproject/openproject-notifications/openproject_notifications/: __init__.py  notifications.py
skills/openproject/openproject-notifications/references/: notifications-api.md
skills/openproject/openproject-notifications/scripts/: __init__.py  notifications.py
skills/openproject/openproject-notifications/tests/: __init__.py  test_notifications.py
skills/openproject/openproject-projects/: SKILL.md  pyproject.toml
skills/openproject/openproject-projects/openproject_projects/: __init__.py  projects.py
skills/openproject/openproject-projects/references/: project-filters.md  projects-api.md
skills/openproject/openproject-projects/scripts/: projects.py
skills/openproject/openproject-projects/tests/: __init__.py  test_projects.py
skills/openproject/openproject-queries/: SKILL.md  pyproject.toml
skills/openproject/openproject-queries/openproject_queries/: __init__.py  queries.py
skills/openproject/openproject-queries/references/: queries-api.md
skills/openproject/openproject-queries/scripts/: __init__.py  queries.py
skills/openproject/openproject-queries/tests/: __init__.py  test_queries.py
skills/openproject/openproject-time/: SKILL.md  pyproject.toml
skills/openproject/openproject-time/openproject_time/: __init__.py  time_entries.py
skills/openproject/openproject-time/references/: time-api.md
skills/openproject/openproject-time/scripts/: __init__.py  time_entries.py
skills/openproject/openproject-time/tests/: __init__.py  test_time.py
skills/openproject/openproject-users/: SKILL.md  pyproject.toml
skills/openproject/openproject-users/openproject_users/: __init__.py  groups.py  memberships.py  users.py
skills/openproject/openproject-users/references/: users-api.md
skills/openproject/openproject-users/scripts/: groups.py  memberships.py  users.py
skills/openproject/openproject-users/tests/: __init__.py  test_users.py
skills/openproject/openproject-work-packages/: SKILL.md  pyproject.toml
skills/openproject/openproject-work-packages/openproject_work_packages/: activities.py  relations.py  work_packages.py
skills/openproject/openproject-work-packages/references/: relations-types.md  work-packages-api.md  wp-filters.md
skills/openproject/openproject-work-packages/scripts/: __init__.py  activities.py  relations.py  work_packages.py
skills/openproject/openproject-work-packages/tests/: __init__.py  test_work_packages.py
skills/openproject/tests/: test_admin.py  test_client.py  test_documents.py  test_helpers.py  test_notifications.py  test_projects.py  test_queries.py  test_time.py  test_users.py  test_work_packages.py
skills/proslide/: .gitignore  SKILL.md
skills/proslide/references/: outline-rules.md  slide-templates.md
skills/proslide/styles/: _template.yaml  bold-impact.yaml  clean-minimal.yaml  corporate-dark.yaml  soft-professional.yaml  warm-earth.yaml
skills/writer-agent/: SKILL.md
(+43 files in other folders)
