[project]
name = "openproject-documents"
version = "1.0.0"
description = "OpenProject Documents - File and wiki management"
requires-python = ">=3.10"
dependencies = ["openproject-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openproject_documents"]
