[project]
name = "openproject-projects"
version = "1.0.0"
description = "OpenProject Projects - Project management operations"
requires-python = ">=3.10"
dependencies = ["openproject-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openproject_projects"]
