[project]
name = "openproject-queries"
version = "1.0.0"
description = "OpenProject Queries - Saved query management"
requires-python = ">=3.10"
dependencies = ["openproject-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openproject_queries"]
