[project]
name = "openproject-users"
version = "1.0.0"
description = "OpenProject Users - User and group management"
requires-python = ">=3.10"
dependencies = ["openproject-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openproject_users"]
