[project]
name = "openproject-work-packages"
version = "1.0.0"
description = "OpenProject Work Packages - Task and issue management"
requires-python = ">=3.10"
dependencies = ["openproject-core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openproject_work_packages"]
